the1web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the1-web-deployment
  namespace: the1-web-#ENV#
  labels:
    app: the1-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the1-web
  template:
    metadata:
      labels:
        app: the1-web
    spec:
      containers:
        - image: #IMAGE#:#TAG#
          imagePullPolicy: Always
          name: the1-web
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
