the1web/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  the1-web-svc
  namespace: the1-web-dev
  labels:
    app: the1-web
spec:
  selector:
    app:  the1-web
  type:  LoadBalancer
  ports:
  - name:  http
    port:  80
    protocol: TCP
    targetPort: 8080
