the1web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: the1-web
  namespace: the1-web-#ENV#
  annotations:
    kubernetes.io/ingress.class: nginx-web
spec:
  rules:
  - host: #ENV#.the1.co.th
    http:
      paths:
      - backend:
          serviceName: the1-web-svc # Edit Service name
          servicePort: 80 # Edit Service port
        path: /
